--- a/data/package.json
+++ b/data/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "json-server --watch words.json --port 9002",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
